--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_auth: ^0.18.3+1
   firebase_core: ^0.5.2+1
   firebase_storage: ^5.2.0
+  flutter_native_image: ^0.0.5+3
   flutter_phoenix: ^0.1.0
   form_field_validator: ^1.0.1
   image_picker: ^0.6.7+14
