--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   async: ^2.4.2
+  cached_network_image: ^2.5.0
   cloud_firestore: ^0.14.3+1
   cupertino_icons: ^1.0.1
   custom_radio_grouped_button: ^1.0.6+1
