--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_storage: ^5.2.0
   flutter_native_image: ^0.0.5+3
   flutter_phoenix: ^0.1.0
+  flutter_xlider: ^3.4.0
   form_field_validator: ^1.0.1
   image_picker: ^0.6.7+14
   provider: ^4.3.2+2
